# HAF

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
Autofill Dictionary/: dictionary.json
Call/: call.json
HAF/: Constants.py  HAFScript.py  __init__.py
HAF/CLI/: CommandLineInterface.py  Commands.py
HAF/Driver/: DriverHandler.py
HAF/FileHandler/: Config.py  JsonHandler.py  Logger.py
HAF/GUI/: GUIHandler.py  MainGUI.py
HAF/GUI/CallHandler/: CallEditor.py
HAF/GUI/TemplateEditor/: TeamplateHandler.py  TeamplateValidator.py
HAF/TemplateCreator/: TCGUI.py  TemplateCreator.py
HAF/Ticket/: TicketHandler.py
Log/: persistent.json
Source/: AutoFiller.py  Constants.py  HAF.py  TemplateCreator.py  __init__.py  teste.py
Source/CLI/: CommandLineInterface.py  Commands.py
Source/Driver/: DriverHandler.py
Source/FileHandler/: Config.py  JsonHandler.py  Logger.py
Source/Ticket/: AttachentHandler.py  TicketHandler.py
