[metadata]
name = HAF
version = attr: HAF.__version__
author = Fábio Gandini
author_email = fabiohenriquegandini@gmail.com
description = Helix AutoFiller ticket management tool
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    selenium >=4.3.0
    webdriver_manager >= 3.7.1

[options.entry_points]
console_scripts = 
    HAF-Script = HAF.HAFScript